--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
             <span class="otherversions">
               <span class="venue">
                 
-                <a href="http://arxiv.org/abs/1304.3868">arXiv</a>
+                <a href="http://drops.dagstuhl.de/opus/volltexte/2014/4687/pdf/4.pdf">proceedings</a>
                 
               </span>
               <span class="year"></span>
