--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h1>Seeun William Umboh</h1>
 	<p>
 	Lecturer in Algorithms <br>
-	School of Information Technologies <br>
+	School of Computer SCience <br>
 	The University of Sydney
 	</p>
 	
@@ -510,5 +510,5 @@
 
     </div>
 
-  </body>
+    </body>
 </html>
