--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h1>Seeun William Umboh</h1>
 	<p>
 	Lecturer in Algorithms <br>
-	School of Computer SCience <br>
+	School of Computer Science <br>
 	The University of Sydney
 	</p>
 	
