--- a/index.html
+++ b/index.html
@@ -53,16 +53,17 @@
     </div>
 
     <div class="section">
-      <h2>Advisees</h2>
+      <h2>Advising</h2>
       <p>
-      Sampson Wong (PhD, co-supervised with Joachim Gudmundsson), Max Davy (SSP S1 2019), Ive Zhang (SSP S2 2019)
+      Sampson Wong, PhD (current; co-supervised with Joachim Gudmundsson) <br>
+      Ive Zhang (SSP S2 2019), Max Davy (SSP S1 2019), Qiang Qu (Summer 2019)
       </p>
     </div>
 
     <div class="section">
       <h2>Teaching</h2>
       <p>
-      COMP3027/3927 Algorithm Design (S1 2019, S1 2020)
+      COMP3027/3927 Algorithm Design (S1 2019)
       </p>
     </div>
     
