--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
       <h2>Advising</h2>
       <p>
       Sampson Wong, PhD (current, co-supervised with Joachim Gudmundsson) <br>
+      Jahanvi Khatkar, Honours (current) <br>
       Ive Zhang (SSP S2 2019), Max Davy (SSP S1 2019), Qiang Qu (Summer 2019)
       </p>
     </div>
@@ -63,14 +64,14 @@
     <div class="section">
       <h2>Teaching</h2>
       <p>
-      COMP3027/3927 Algorithm Design (S1 2019)
+      COMP3027/3927 Algorithm Design (S1 2020, S1 2019)
       </p>
     </div>
     
     <div class="section">
       <h2>Program Committees</h2>
       <p>
-      FSTTCS 2018, APPROX 2017
+      SOSA 2021, FSTTCS 2018, APPROX 2017
       </p>
     </div>
     
