Added Honours and MPhil students starting S1 2020, teaching 2021, and SODA 22 PC membership

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
       <h2>Advising</h2>
       <p>
       PhD: Sampson Wong, (current, co-supervised with Joachim Gudmundsson) <br>
-      Honours: Ive Zhang (S2 2020), Jahanvi Khatkar (S1 2020) <br>
+      MPhil: Lindsey Deryckere (current) <br>
+      Honours: Ryder Chen (current), Mai Le (current), Ive Zhang (current), Jahanvi Khatkar (S1 2020) <br>
       Interns: Finn Waugh (Winter 2020), TJ Kojima (Summer 2020), Qiang Qu (Summer 2019) <br>
       SSP: Ryder Chen (S2 2020), Cameron Eggins (S2 2020), Ive Zhang (S2 2019), Max Davy (S1 2019)
       </p>
@@ -65,14 +66,14 @@
     <div class="section">
       <h2>Teaching</h2>
       <p>
-      COMP3027/3927 Algorithm Design (S1 2020, S1 2019)
+      COMP3027/3927 Algorithm Design (S1 2021, S1 2020, S1 2019)
       </p>
     </div>
     
     <div class="section">
       <h2>Program Committees</h2>
       <p>
-      SOSA 2021, FSTTCS 2018, APPROX 2017
+      SODA 2022, SOSA 2021, FSTTCS 2018, APPROX 2017
       </p>
     </div>
     
