--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 
 
     <div class="section">
-      <h2>Research Interests</h2>
+      <h2>About Me</h2>
+	    <p> I am a Lecturer in Algorithms and the CS Honours Coordinator in the School of Computer Science at the University of Sydney. Previously, I was a postdoc with Prof. Nikhil Bansal at TU Eindhoven. I received my Ph.D. in Computer Science from the University of Wisconsin-Madison where I was co-advised by Profs. Shuchi Chawla and Eric Bach. I also have a M.Sc in Computer Science and a B.Sc. majoring in Computer Science and Mathematics, all from UW-Madison.
+	    </p>
       <p>
       I am broadly interested in theoretical computer science and combinatorial optimization. Currently, I am working on approximation and online algorithms, graph optimization (e.g. network design, graph partitioning), and metric embeddings.
       </p>
