--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <h2>Teaching</h2>
       <p>
       COMP3027/3927 Algorithm Design (S1 2022, S1 2021, S1 2020, S1 2019)<br>
-      COMP9123 Data Structures and Algorithms (S1 2022 (co-taught with Clement Cannone))
+      COMP9123 Data Structures and Algorithms (S1 2022 (co-taught with Clement Canonne))
       </p>
     </div>
     
