--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div class="section">
       <h2>Program Committees</h2>
       <p>
-      LATIN 2022, APPROX 2022, SODA 2022, SOSA 2021, FSTTCS 2018, APPROX 2017
+      WAOA 2022, LATIN 2022, APPROX 2022, SODA 2022, SOSA 2021, FSTTCS 2018, APPROX 2017
       </p>
     </div>
     
