--- a/index.html
+++ b/index.html
@@ -57,21 +57,22 @@
     <div class="section">
       <h2>Advising</h2>
       <p>
-      PhD:
+	      <b>PhD</b>:
       Lindsey Deryckere (current); Sampson Wong, (current, co-supervised with Joachim Gudmundsson) <br>
-      MPhil: Sampson Wong (2019, co-supervised with Joachim Gudmundsson) <br>
-      Current Honours students: Alan Wu, Faye Xie, Tom Schwarz <br>
-      Past Honours students: Ryder Chen (2021, First Class Honours with University Medal), Mai Le (2021, First Class Honours with University Medal), Ive Zhang (2021, First Class Honours with University Medal), Jahanvi Khatkar (2020, First Class Honours with University Medal) <br>
-      Interns: Tanishq Dubey (2021), Aryan Gupta (2020), Finn Waugh (Winter 2020), TJ Kojima (Summer 2020), Qiang Qu (Summer 2019) <br>
-      SSP: Ryder Chen (S2 2020), Cameron Eggins (S2 2020), Ive Zhang (S2 2019), Max Davy (S1 2019)
+	      <b>MPhil</b>: Sampson Wong (2019, co-supervised with Joachim Gudmundsson) <br>
+	      <b>Current Honours students</b>: Alan Wu, Faye Xie, Tom Schwarz <br>
+	      <b>Past Honours students</b>: Ryder Chen (2021, First Class Honours with University Medal), Mai Le (2021, First Class Honours with University Medal), Ive Zhang (2021, First Class Honours with University Medal), Jahanvi Khatkar (2020, First Class Honours with University Medal) <br>
+	      <b>Interns</b>: Tanishq Dubey (2021), Aryan Gupta (2020), Finn Waugh (Winter 2020), TJ Kojima (Summer 2020), Qiang Qu (Summer 2019) <br>
+	      <b>Coursework project</b>: Ryder Chen (S2 2020), Cameron Eggins (S2 2020), Ive Zhang (S2 2019), Max Davy (S1 2019)
       </p>
     </div>
 
     <div class="section">
       <h2>Teaching</h2>
       <p>
-      COMP3027/3927 Algorithm Design (S1 2022, S1 2021, S1 2020, S1 2019)<br>
-      COMP9123 Data Structures and Algorithms (S1 2022 (co-taught with Clement Cannone))
+      COMP3027/3927 Algorithm Design: S1 2022, S1 2021, S1 2020, S1 2019<br>
+      COMP3927 Algorithm Design (Advanced): S1 2022, S1 2021, S1 2020, S1 2019<br>
+      COMP9123 Data Structures and Algorithms: S1 2022 (co-taught with Clement Cannone)
       </p>
     </div>
     
@@ -85,7 +86,7 @@
     <div class="section">
       <h2>Publications</h2>
 
-       <script src="https://bibbase.org/show?bib=https://bibbase.org/network/files/qyK8KPx6JHiBjGaRs&jsonp=1&fullname=0"></script> 
+       <script src="https://bibbase.org/show?bib=https://bibbase.org/network/files/qyK8KPx6JHiBjGaRs&jsonp=1&noTitleLinks=false"></script> 
 
 
  
