--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
       </ul>
       </p>
       <p>
+	      <b>Interns</b>: Tanishq Dubey (2021), Aryan Gupta (2020), Finn Waugh (Winter 2020), TJ Kojima (Summer 2020), Qiang Qu (Summer 2019) <br>
 	      <b>Coursework project</b>: Ryder Chen (S2 2020), Cameron Eggins (S2 2020), Ive Zhang (S2 2019), Max Davy (S1 2019)
       </p>
     </div>
