--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
     <div class="section">
       <h2>Advising</h2>
     <p>
-      <b>PhD</b>:      <ul>
+      <b>PhD</b>
+	<ul>
 	<li>Lindsey Deryckere</li>
 	<li>Sampson Wong (co-supervised)</li>
       </ul>
