--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
 
     <div class="section">
       <h2>Advising</h2>
-    <p>
+
       <b>PhD</b>
 	<ul>
 	<li>Lindsey Deryckere</li>
 	<li>Sampson Wong (co-supervised)</li>
       </ul>
-      </p>
-      <p><b>MPhil</b>
-      <ul><li>Sampson Wong (2019, co-supervised)</li></ul> </p>
-      <p>
+
+      <b>MPhil</b>
+      <ul><li>Sampson Wong (2019, co-supervised)</li></ul> 
+      
       <b>Honours</b>
       <ul>
 	<li> Current: Alan Wu, Faye Xie, Tom Schwarz </li>
@@ -74,11 +74,9 @@
 	<li> Ive Zhang (2021, First Class Honours with University Medal)</li>
 	<li> Jahanvi Khatkar (2020, First Class Honours with University Medal)</li>
       </ul>
-      </p>
-      <p>
-	      <b>Interns</b>: Tanishq Dubey (2021), Aryan Gupta (2020), Finn Waugh (Winter 2020), TJ Kojima (Summer 2020), Qiang Qu (Summer 2019) <br>
-	      <b>Coursework project</b>: Ryder Chen (S2 2020), Cameron Eggins (S2 2020), Ive Zhang (S2 2019), Max Davy (S1 2019)
-      </p>
+
+	<b>Interns</b>: Tanishq Dubey (2021), Aryan Gupta (2020), Finn Waugh (Winter 2020), TJ Kojima (Summer 2020), Qiang Qu (Summer 2019) <br>
+	<b>Coursework project</b>: Ryder Chen (S2 2020), Cameron Eggins (S2 2020), Ive Zhang (S2 2019), Max Davy (S1 2019)
     </div>
 
     <div class="section">
