--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div class="section">
       <h2>Teaching</h2>
       <p>
-      COMP3027/3927 Algorithm Design: S1 2022, S1 2021, S1 2020, S1 2019<br>
+      COMP3027 Algorithm Design: S1 2022, S1 2021, S1 2020, S1 2019<br>
       COMP3927 Algorithm Design (Advanced): S1 2022, S1 2021, S1 2020, S1 2019<br>
       COMP9123 Data Structures and Algorithms: S1 2022 (co-taught with Clement Cannone)
       </p>
