--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div class="section">
       <h2>Publications</h2>
 
-       <script src="https://bibbase.org/show?bib=https://bibbase.org/network/files/qyK8KPx6JHiBjGaRs&jsonp=1&noTitleLinks=false"></script> 
+       <script src="https://bibbase.org/show?bib=https://bibbase.org/network/files/qyK8KPx6JHiBjGaRs&jsonp=1"></script> 
 
 
  
