--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       </ul>
 
 	<b>Interns</b>: Tanishq Dubey (2021), Aryan Gupta (2020), Finn Waugh (Winter 2020), TJ Kojima (Summer 2020), Qiang Qu (Summer 2019) <br>
-	<b>Coursework project</b>: Ryder Chen (S2 2020), Cameron Eggins (S2 2020), Ive Zhang (S2 2019), Max Davy (S1 2019)
+	<b>Coursework project</b>: Alan Wu (S2 2021), Ryder Chen (S2 2020), Cameron Eggins (S2 2020), Ive Zhang (S2 2019), Max Davy (S1 2019)
     </div>
 
     <div class="section">
