--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 
     <div class="section">
       <h2>About Me</h2>
-       <p> I am a Lecturer in Algorithms and the CS Honours Coordinator in the School of Computer Science at the University of Sydney. Previously, I was a postdoc with Prof. Nikhil Bansal at TU Eindhoven. I received my Ph.D. in Computer Science at the University of Wisconsin-Madison where I was fortunate to be co-advised by Profs. Shuchi Chawla and Eric Bach. I also have a M.Sc in Computer Science and a B.Sc. majoring in Computer Science and Mathematics, all from UW-Madison.
-	    </p>
-      <p>
-      I am broadly interested in theoretical computer science and combinatorial optimization. Currently, I am working on approximation and online algorithms, graph optimization (e.g. network design, graph partitioning), and metric embeddings.
-      </p>
+	<p>I am a Lecturer in Algorithms and the CS Honours Coordinator in the School of Computer Science at the University of Sydney. My research is broadly in theoretical computer science and combinatorial optimisation. I am particularly interested in approximation and online algorithms for optimisation problems involving graphs and metric spaces. I am also interested in collaborating with people outside of theoretical computer science to improve the use of algorithms in specific real-world settings. </p>
+
+	<p>I am passionate about sharing the joy of algorithmic problem-solving with students of all levels. I am incredibly grateful to have supervised 4 wonderful Honours students, all 4 of whom have received the University Medal, and to have co-authored 2 papers (1 at ICALP 2022 and 1 at SODA 2023) with them. Since 2019, I have been the unit coordinator and lecturer for the third-year algorithms unit COMP3027 and its advanced version COMP3927. I have been awarded the Faculty Unit of Study Survey Commendations 4 times for exceptionally high student ratings.</p>
+	       
+	<p>Before joining the University of Sydney, I was fortunate to be a postdoc with Prof. Nikhil Bansal at TU Eindhoven. I was also a Visiting Professor at the Hebrew University of Jerusalem (hosted by Yair Bartal) from Oct 2017 - Jan 2018 and a Visiting Postdoc at the Simons Institute for the Algorithms and Uncertainty (Fall 2016) and Fine-Grained Complexity (Fall 2017) programs. I received my PhD in Computer Science at the University of Wisconsin-Madison, where I was blessed to be co-advised by Profs. Shuchi Chawla and Eric Bach. I also have an MSc in Computer Science and a BSc majoring in Computer Science and Mathematics, all from UW-Madison.</p>
     </div>
 		    
     <div class="section">
