--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
     <div class="section">
       <h2>News</h2>
       <ul>
-	<li> Oct 2022: Our paper "The Power of Clairvoyance for Multi-Level Aggregation and Set Cover with Delay" with 2 excellent undergrad Honours students Ngoc Mai Le and Ningyuan Xie was accepted at SODA 2023.</li> 
+	<li> Oct 2022: Our paper "The Power of Clairvoyance for Multi-Level Aggregation and Set Cover with Delay" with 2 excellent undergrad Honours students Ngoc Mai Le and Ningyuan Xie was accepted at SODA 2023</li> 
 	<li> Sep 2022: Our paper <a href="https://arxiv.org/abs/2207.12507">"Nested Active-Time Scheduling"</a> with Nairen Cao, Jeremy Fineman, Shi Li, Julian Mestre and Katina Russell was accepted at ISAAC 2022</li> 	      	
 	<li> Jul 2022: I am on the WADS PC</li>
-	<li> Jul 2022: I am in Paris for ICALP 2022 and to visit IRIF.</li>
+	<li> Jul 2022: I am in Paris for ICALP 2022 and to visit IRIF</li>
 	<li> Jun 2022: I am on the LATIN PC </li>	
 	<li> May 2022: I am co-organizing the <a href="https://sites.google.com/view/2022-workshop-bridgingmathstcs/">AMSI-AustMS Workshop on Bridging Maths and Computer Science</a></li>	
-	<li> May 2022: Our paper <a href="https://doi.org/10.4230/LIPIcs.ICALP.2022.40">"Online Weighted Cardinality Joint Replenishment Problem with Delay"</a> with 2 brilliant undergrad Honours students Ryder Chen and Jahanvi Khatkar has been accepted to ICALP 2022.</li>	
+	<li> May 2022: Our paper <a href="https://doi.org/10.4230/LIPIcs.ICALP.2022.40">"Online Weighted Cardinality Joint Replenishment Problem with Delay"</a> with 2 brilliant undergrad Honours students Ryder Chen and Jahanvi Khatkar has been accepted to ICALP 2022</li>	
 	<li> May 2022: Our paper <a href="https://doi.org/10.1145/3490148.3538554">"Brief Announcement: Nested Active-Time Scheduling"</a> with Nairen Cao, Jeremy Fineman, Shi Li, Julian Mestre and Katina Russell was accepted at SPAA 2022</li> 	      	
 	<li> May 2022: I am on the APPROX PC </li>	      
 	<li> April 2022: Our paper <a href="https://doi.org/10.1007/s11227-022-04556-7">"Runtime and Energy Constrained Work Scheduling for Heterogeneous Systems"</a> with Valon Raca, Eduard Mehofer and Bernhard Scholz has been accepted at the Journal of Supercomputing</li>      
