--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <div class="section">
       <h2>About Me</h2>
-	<p>I am a Lecturer in Algorithms and the CS Honours Coordinator in the School of Computer Science at the University of Sydney. My research is broadly in theoretical computer science and combinatorial optimisation. I am particularly interested in approximation and online algorithms for optimisation problems involving graphs and metric spaces. I am also interested in collaborating with people outside of theoretical computer science to improve the use of algorithms in specific real-world settings. </p>
+	<p>My research is broadly in theoretical computer science and combinatorial optimisation. I am particularly interested in approximation and online algorithms for optimisation problems involving graphs and metric spaces. I am also interested in collaborating with people outside of theoretical computer science to improve the use of algorithms in specific real-world settings. </p>
 
 	<p>I am passionate about sharing the joy of algorithmic problem-solving with students of all levels. I am incredibly grateful to have supervised 4 wonderful Honours students, all 4 of whom have received the University Medal, and to have co-authored 2 papers (1 at ICALP 2022 and 1 at SODA 2023) with them. Since 2019, I have been the unit coordinator and lecturer for the third-year algorithms unit COMP3027 and its advanced version COMP3927. I have been awarded the Faculty Unit of Study Survey Commendations 4 times for exceptionally high student ratings.</p>
 	       
