--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
       <b>Honours</b>
       <ul>
 	<li> Current: Alan Wu, Faye Xie, Tom Schwarz </li>
-	<li> Ryder Chen (2021, First Class Honours with University Medal)</li>
-	<li> Mai Le (2021, First Class Honours with University Medal)</li>
-	<li> Ive Zhang (2021, First Class Honours with University Medal)</li>
-	<li> Jahanvi Khatkar (2020, First Class Honours with University Medal)</li>
+	<li> Ryder Chen - 2021, First Class Honours with University Medal</li>
+	<li> Mai Le - 2021, First Class Honours with University Medal, Allan Bromley Prize (best thesis mark in CS Honours)</li>
+	<li> Ive Zhang - 2021, First Class Honours with University Medal</li>
+	<li> Jahanvi Khatkar - 2020, First Class Honours with University Medal</li>
       </ul>
 
 	<b>Interns</b>: Tanishq Dubey (2021), Aryan Gupta (2020), Finn Waugh (Winter 2020), TJ Kojima (Summer 2020), Qiang Qu (Summer 2019) <br>
