--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <ul>
 	<li> Current: Alan Wu, Faye Xie, Tom Schwarz </li>
 	<li> Ryder Chen - 2021, First Class Honours with University Medal</li>
-	<li> Mai Le - 2021, First Class Honours with University Medal, Allan Bromley Prize (best thesis mark in CS Honours)</li>
+	<li> Mai Le - 2021, First Class Honours with University Medal, Allan Bromley Prize (best Honours thesis mark in CS)</li>
 	<li> Ive Zhang - 2021, First Class Honours with University Medal</li>
 	<li> Jahanvi Khatkar - 2020, First Class Honours with University Medal</li>
       </ul>
