--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	<li> Jul 2022: I am on the WADS PC</li>
 	<li> Jul 2022: I am in Paris for ICALP 2022 and to visit IRIF</li>
 	<li> Jun 2022: I am on the LATIN PC </li>
-	<li> May 2022: My Honours student Mai Le has received the Allan Bromley Prize for best Honours thesis mark in CS in 2021 </li>
+	<li> May 2022: My Honours student Ngoc Mai Le has received the Allan Bromley Prize for best Honours thesis mark in CS in 2021 </li>
 	<li> May 2022: I am co-organizing the <a href="https://sites.google.com/view/2022-workshop-bridgingmathstcs/">AMSI-AustMS Workshop on Bridging Maths and Computer Science</a></li>	
 	<li> May 2022: Our paper <a href="https://doi.org/10.4230/LIPIcs.ICALP.2022.40">"Online Weighted Cardinality Joint Replenishment Problem with Delay"</a> with 2 brilliant undergrad Honours students Ryder Chen and Jahanvi Khatkar has been accepted to ICALP 2022</li>	
 	<li> May 2022: Our paper <a href="https://doi.org/10.1145/3490148.3538554">"Brief Announcement: Nested Active-Time Scheduling"</a> with Nairen Cao, Jeremy Fineman, Shi Li, Julian Mestre and Katina Russell was accepted at SPAA 2022</li> 	      	
