--- a/onlinematchingwithsetdelay.html
+++ b/onlinematchingwithsetdelay.html
@@ -1,1 +1,1 @@
-<meta http-equiv="Refresh" content="0; url='https://www.arxiv.org'" />
+<meta http-equiv="Refresh" content="0; url='https://arxiv.org/abs/2211.02394'" />
