--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
 	<li> May 2022: Our paper <a href="https://doi.org/10.4230/LIPIcs.ICALP.2022.40">"Online Weighted Cardinality Joint Replenishment Problem with Delay"</a> with 2 brilliant undergrad Honours students Ryder Chen and Jahanvi Khatkar has been accepted to ICALP 2022</li>	
 	<li> May 2022: Our paper <a href="https://doi.org/10.1145/3490148.3538554">"Brief Announcement: Nested Active-Time Scheduling"</a> with Nairen Cao, Jeremy Fineman, Shi Li, Julian Mestre and Katina Russell was accepted at SPAA 2022</li> 	      	
 	<li> May 2022: I am on the APPROX PC </li>	      
-	<li> April 2022: Our paper <a href="https://doi.org/10.1007/s11227-022-04556-7">"Runtime and Energy Constrained Work Scheduling for Heterogeneous Systems"</a> with Valon Raca, Eduard Mehofer and Bernhard Scholz has been accepted at the Journal of Supercomputing</li>      
+	<li> Apr 2022: Our paper <a href="https://doi.org/10.1007/s11227-022-04556-7">"Runtime and Energy Constrained Work Scheduling for Heterogeneous Systems"</a> with Valon Raca, Eduard Mehofer and Bernhard Scholz has been accepted at the Journal of Supercomputing</li>      
+	<li> Feb 2022: My Honours students Ryder Chen and Ngoc Mai Le have received First Class Honours with University Medal</li>      
      </ul>
     </div>
 		    
@@ -90,16 +91,18 @@
 	<li>Sampson Wong (co-supervised)</li>
       </ul>
 
-      <b>MPhil</b>
-      <ul><li>Sampson Wong (2019, co-supervised)</li></ul> 
+      <b>MPhil</b>	    
+      <ul>
+	      <li> Yun Li (2022) </li></ul>
+	      <li>Sampson Wong (2019, co-supervised)</li></ul> 
       
       <b>Honours</b>
       <ul>
 	<li> Current: Alan Wu, Faye Xie, Tom Schwarz </li>
-	<li> Ryder Chen - 2021, First Class Honours with University Medal</li>
-	<li> Ngoc Mai Le - 2021, First Class Honours with University Medal, Allan Bromley Prize (best Honours thesis mark in CS in 2021)</li>
-	<li> Ive Zhang - 2021, First Class Honours with University Medal</li>
-	<li> Jahanvi Khatkar - 2020, First Class Honours with University Medal</li>
+	      <li> Ryder Chen - 2021, First Class Honours with <u>University Medal</u></li>
+	      <li> Ngoc Mai Le - 2021, First Class Honours with <u>University Medal</u>, <u>Allan Bromley Prize (best Honours thesis mark in CS in 2021)</u></li>
+	      <li> Ive Zhang - 2021, First Class Honours with <u>University Medal</u></li>
+	      <li> Jahanvi Khatkar - 2020, First Class Honours with <u>University Medal</u></li>
       </ul>
 
 	<b>Interns</b>: Tanishq Dubey (2021), Aryan Gupta (2020), Finn Waugh (Winter 2020), TJ Kojima (Summer 2020), Qiang Qu (Summer 2019) <br>
