--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <ul>
 	<li> Current: Alan Wu, Faye Xie, Tom Schwarz </li>
 	      <li> Ryder Chen - 2021, First Class Honours with <u>University Medal</u></li>
-	      <li> Ngoc Mai Le - 2021, First Class Honours with <u>University Medal</u>, <u>Allan Bromley Prize (best Honours thesis mark in CS in 2021)</u></li>
+	      <li> Ngoc Mai Le - 2021, First Class Honours with <u>University Medal</u>, <u>Allan Bromley Prize</u> (best Honours thesis mark in CS in 2021)</li>
 	      <li> Ive Zhang - 2021, First Class Honours with <u>University Medal</u></li>
 	      <li> Jahanvi Khatkar - 2020, First Class Honours with <u>University Medal</u></li>
       </ul>
