--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
       <h2>News</h2>
       <ul>
 	<li> Oct 2022: Our paper "The Power of Clairvoyance for Multi-Level Aggregation and Set Cover with Delay" with 2 excellent undergrad Honours students Ngoc Mai Le and Ningyuan Xie was accepted at SODA 2023</li> 
+	      <li> Oct 2022: Yun Li has started as an MPhil student, co-supervised with Clement Canonne</li>
 	<li> Sep 2022: Our paper <a href="https://arxiv.org/abs/2207.12507">"Nested Active-Time Scheduling"</a> with Nairen Cao, Jeremy Fineman, Shi Li, Julian Mestre and Katina Russell was accepted at ISAAC 2022</li> 	      	
 	<li> Jul 2022: I am on the WADS PC</li>
 	<li> Jul 2022: I am in Paris for ICALP 2022 and to visit IRIF</li>
@@ -93,7 +94,7 @@
 
       <b>MPhil</b>	    
       <ul>
-	      <li> Yun Li (2022) </li></ul>
+	      <li> Yun Li (co-supervised)</li>
 	      <li>Sampson Wong (2019, co-supervised)</li></ul> 
       
       <b>Honours</b>
