--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 	<p>
 	Lecturer in Algorithms and CS Honours Coordinator<br>
 	School of Computer Science <br>
-	The University of Sydney
+	The University of Sydney <br>
+	(Note: I am moving to University of Melbourne on 1 May 2023)
 	</p>
 	
 	<p>
@@ -57,6 +58,7 @@
     <div class="section">
       <h2>News</h2>
       <ul>
+	      <li> Dec 2022: I am excited to start as Lecturer in Computational Theory at the University of Melbourne on 1 May. </li>
 	<li> Oct 2022: Our paper "The Power of Clairvoyance for Multi-Level Aggregation and Set Cover with Delay" with 2 excellent undergrad Honours students Ngoc Mai Le and Ningyuan Xie was accepted at SODA 2023</li> 
 	      <li> Oct 2022: Yun Li has started as an MPhil student, co-supervised with Clement Canonne</li>
 	<li> Sep 2022: Our paper <a href="https://arxiv.org/abs/2207.12507">"Nested Active-Time Scheduling"</a> with Nairen Cao, Jeremy Fineman, Shi Li, Julian Mestre and Katina Russell was accepted at ISAAC 2022</li> 	      	
