--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	<li> Oct 2022: Our paper "The Power of Clairvoyance for Multi-Level Aggregation and Set Cover with Delay" with 2 excellent undergrad Honours students Ngoc Mai Le and Ningyuan Xie was accepted at SODA 2023</li> 
 	      <li> Oct 2022: Yun Li has started as an MPhil student, co-supervised with Clement Canonne</li>
 	<li> Sep 2022: Our paper <a href="https://arxiv.org/abs/2207.12507">"Nested Active-Time Scheduling"</a> with Nairen Cao, Jeremy Fineman, Shi Li, Julian Mestre and Katina Russell was accepted at ISAAC 2022</li> 	      	
-	<li> Jul 2022: I am on the WADS PC</li>
+	<li> Jul 2022: I am on the WAOA PC</li>
 	<li> Jul 2022: I am in Paris for ICALP 2022 and to visit IRIF</li>
 	<li> Jun 2022: I am on the LATIN PC </li>
 	<li> May 2022: My Honours student Ngoc Mai Le has received the Allan Bromley Prize for best Honours thesis mark in CS in 2021 </li>
@@ -124,7 +124,7 @@
     <div class="section">
       <h2>Program Committees</h2>
       <p>
-      SODA 2022, APPROX 2022, LATIN 2022, WADS 2022, SOSA 2021, FSTTCS 2018, APPROX 2017
+      SODA 2022, APPROX 2022, LATIN 2022, WAOA 2022, SOSA 2021, FSTTCS 2018, APPROX 2017
       </p>
     </div>
     
