--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		    
     <div class="section">
       <h2>News</h2>
-      <ul>
+      <ul><li> Mar 2023: I will be on the ISAAC PC </li>
 	      <li> Dec 2022: I am excited to start as Lecturer in Computational Theory at the University of Melbourne on 1 May 2023! </li>
 	<li> Oct 2022: Our paper "The Power of Clairvoyance for Multi-Level Aggregation and Set Cover with Delay" with 2 excellent undergrad Honours students Ngoc Mai Le and Ningyuan Xie was accepted at SODA 2023</li> 
 	      <li> Oct 2022: Yun Li has started as an MPhil student, co-supervised with Clement Canonne</li>
@@ -124,7 +124,7 @@
     <div class="section">
       <h2>Program Committees</h2>
       <p>
-      SODA 2022, APPROX 2022, LATIN 2022, WAOA 2022, SOSA 2021, FSTTCS 2018, APPROX 2017
+      ISAAC 2023, SODA 2022, APPROX 2022, LATIN 2022, WAOA 2022, SOSA 2021, FSTTCS 2018, APPROX 2017
       </p>
     </div>
     
