--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	Lecturer in Computational Theory<br>
 	School of Computing and Information Systems <br>
 	The University of Melbourne <br>
-	(Note: My position commences on 19 April 2023)
+	(My position commences on 19 April 2023)
 	</p>
 	
 	<p>
@@ -55,8 +55,7 @@
 		    
     <div class="section">
       <h2>News</h2>
-      <ul><li> Mar 2023: I will be on the LATIN PC </li>
-      <li> Mar 2023: I will be on the ISAAC PC </li>
+      <ul><li> Mar 2023: I will be on the ISAAC and LATIN Program Committees </li>
       <li> Mar 2023: My Honours students Ningyuan Xie and Thomas Schwarz have received First Class Honours with University Medal </li>
       <li> Feb 2023: I am in Rome visiting Stefano Leonardi's at Sapienza University of Rome</li>
 		      <li> Jan 2023: I am in Florence for SODA 2023 </li>
